filter section added in case-study index

--- a/casestudy/arppan.html
+++ b/casestudy/arppan.html
@@ -922,136 +922,102 @@
         </nav>
     </section>
 
-    <section class="relative bg-gradient-to-br from-gray-900 via-indigo-950 to-black py-24 overflow-hidden">
-        <!-- Background Particles Effect -->
-        <div class="absolute inset-0 pointer-events-none">
-            <div class="particles"></div>
-        </div>
-
+    <section class="relative bg-white py-16">
         <div class="max-w-7xl mx-auto px-6 md:px-12">
             <!-- Header -->
-            <div class="text-center mb-16">
-                <h2
-                    class="text-4xl md:text-5xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 via-indigo-400 to-pink-500 animate-gradient">
+            <div class="text-left mb-12">
+                <h2 class="text-3xl md:text-4xl font-bold text-gray-800">
                     Key Achievements
                 </h2>
-                <div
-                    class="w-32 h-1 bg-gradient-to-r from-cyan-400 to-pink-500 mx-auto mt-4 rounded-full animate-pulse">
-                </div>
             </div>
 
+            <!-- Stats Section -->
+            <!-- <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-12 text-center">
+                <div class="border-r-0 md:border-r border-gray-200">
+                    <p class="text-4xl font-bold text-gray-800">328</p>
+                    <p class="text-sm text-gray-600 uppercase mt-2">Total Clicks</p>
+                </div>
+                <div class="border-r-0 md:border-r border-gray-200">
+                    <p class="text-4xl font-bold text-gray-800">8.07K</p>
+                    <p class="text-sm text-gray-600 uppercase mt-2">Total Impressions</p>
+                </div>
+                <div>
+                    <p class="text-4xl font-bold text-gray-800">4.1%</p>
+                    <p class="text-sm text-gray-600 uppercase mt-2">CTR Achieved</p>
+                </div>
+            </div> -->
+
             <!-- Main Content -->
-            <div class="grid grid-cols-1 lg:grid-cols-5 gap-8 items-start">
-                <!-- Left: Achievement Cards -->
-                <div class="lg:col-span-3 space-y-8">
-                    <div
-                        class="achievement-card glassmorphic p-8 rounded-2xl transform transition-all duration-500 hover:shadow-2xl hover:-translate-y-2">
-                        <h3 class="text-2xl font-semibold text-cyan-300 mb-3 flex items-center">
-                            <span class="mr-3 text-3xl">📈</span> Traffic Growth
-                        </h3>
-                        <ul class="list-none space-y-3 text-gray-200 text-[16px] leading-relaxed">
-                            <li class="flex items-start">
-                                <span class="inline-block w-2 h-2 bg-cyan-400 rounded-full mr-3 mt-2"></span>
-                                Achieved a significant increase in organic traffic from April to August 2024.
-                            </li>
-                            <li class="flex items-start">
-                                <span class="inline-block w-2 h-2 bg-cyan-400 rounded-full mr-3 mt-2"></span>
-                                Total clicks reached 328 with 8.07K total impressions, showing strong growth momentum.
+            <div class="space-y-8">
+                <!-- Traffic Growth -->
+                <div class="flex flex-col md:flex-row items-start gap-6 border-b border-gray-200 pb-6">
+                    <h3
+                        class="text-xl font-semibold bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-blue-800 md:w-1/4">
+                        Traffic Growth
+                    </h3>
+                    <div class="md:w-3/4">
+                        <ul class="text-gray-600 text-[15px] leading-relaxed list-disc space-y-2 pl-5">
+                            <li>Achieved a significant increase in organic traffic from April to August 2024.</li>
+                            <li>Total clicks reached 328 with 8.07K total impressions, showing strong growth momentum.
                             </li>
                         </ul>
                     </div>
+                </div>
 
-                    <div
-                        class="achievement-card glassmorphic p-8 rounded-2xl transform transition-all duration-500 hover:shadow-2xl hover:-translate-y-2">
-                        <h3 class="text-2xl font-semibold text-cyan-300 mb-3 flex items-center">
-                            <span class="mr-3 text-3xl">🎯</span> Improved Click-Through Rate (CTR)
-                        </h3>
-                        <p class="text-gray-200 text-[16px] leading-relaxed">
+                <!-- Improved Click-Through Rate (CTR) -->
+                <div class="flex flex-col md:flex-row items-start gap-6 border-b border-gray-200 pb-6">
+                    <h3
+                        class="text-xl font-semibold bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-blue-800 md:w-1/4">
+                        Improved Click-Through Rate (CTR)
+                    </h3>
+                    <div class="md:w-3/4">
+                        <p class="text-gray-600 text-[15px] leading-relaxed">
                             Maintained a healthy 4.1% CTR, reflecting the effectiveness of targeted keywords and
                             optimized content.
                         </p>
                     </div>
+                </div>
 
-                    <div
-                        class="achievement-card glassmorphic p-8 rounded-2xl transform transition-all duration-500 hover:shadow-2xl hover:-translate-y-2">
-                        <h3 class="text-2xl font-semibold text-cyan-300 mb-3 flex items-center">
-                            <span class="mr-3 text-3xl">🔍</span> Better Search Rankings
-                        </h3>
-                        <p class="text-gray-200 text-[16px] leading-relaxed">
+                <!-- Better Search Rankings -->
+                <div class="flex flex-col md:flex-row items-start gap-6 border-b border-gray-200 pb-6">
+                    <h3
+                        class="text-xl font-semibold bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-blue-800 md:w-1/4">
+                        Better Search Rankings
+                    </h3>
+                    <div class="md:w-3/4">
+                        <p class="text-gray-600 text-[15px] leading-relaxed">
                             The average search position improved to 10.5, indicating a higher visibility for Arppan's
                             primary search terms.
                         </p>
                     </div>
+                </div>
 
-                    <div
-                        class="achievement-card glassmorphic p-8 rounded-2xl transform transition-all duration-500 hover:shadow-2xl hover:-translate-y-2">
-                        <h3 class="text-2xl font-semibold text-cyan-300 mb-3 flex items-center">
-                            <span class="mr-3 text-3xl">🛠️</span> Content Optimization
-                        </h3>
-                        <p class="text-gray-200 text-[16px] leading-relaxed">
+                <!-- Content Optimization -->
+                <div class="flex flex-col md:flex-row items-start gap-6 border-b border-gray-200 pb-6">
+                    <h3
+                        class="text-xl font-semibold bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-blue-800 md:w-1/4">
+                        Content Optimization
+                    </h3>
+                    <div class="md:w-3/4">
+                        <p class="text-gray-600 text-[15px] leading-relaxed">
                             Updated meta tags, implemented keyword-focused blogs, and conducted backlink-building,
                             boosting the domain authority from 2 to 9 (Semrush Score).
                         </p>
                     </div>
-
-                    <p class="text-center italic text-gray-300 text-[15px] mt-8">
-                        Voicene’s tailored SEO efforts have substantially increased Arppan's search engine performance,
-                        driving higher engagement and visibility across Kerala and beyond.
-                    </p>
-                </div>
-
-                <!-- Right: Stacked Images with Parallax -->
-                <div class="lg:col-span-2 space-y-6">
-                    <div class="relative group">
-                        <div
-                            class="image-container relative w-full h-64 rounded-2xl overflow-hidden shadow-xl transform transition-transform duration-700 hover:-translate-y-2 hover:rotate-1">
-                            <img src="./img/keyimg.png" alt="SEO Growth Chart" class="w-full h-full object-cover" />
-                            <!-- <div
-                                class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-500 flex items-end justify-center">
-                                <p class="text-white text-sm font-medium p-4">SEO Traffic Surge</p>
-                            </div> -->
-                        </div>
-                        <div
-                            class="absolute -top-4 -left-4 w-10 h-10 bg-cyan-500 rounded-full opacity-40 animate-float">
-                        </div>
-                    </div>
-
-                    <div class="relative group md:ml-20 ml-12">
-                        <div
-                            class="image-container relative w-full h-64 rounded-2xl overflow-hidden shadow-xl transform transition-transform duration-700 hover:-translate-y-2 hover:-rotate-1">
-                            <img src="./img/keyimg.png" alt="SEO Analytics Dashboard"
-                                class="w-full h-full object-cover" />
-                            <!-- <div
-                                class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-500 flex items-end justify-center">
-                                <p class="text-white text-sm font-medium p-4">Analytics in Action</p>
-                            </div> -->
-                        </div>
-                        <div
-                            class="absolute -bottom-4 -right-4 w-12 h-12 bg-pink-500 rounded-full opacity-40 animate-float delay-700">
-                        </div>
-                    </div>
-                    <div class="relative group">
-                        <div
-                            class="image-container relative w-full h-64 rounded-2xl overflow-hidden shadow-xl transform transition-transform duration-700 hover:-translate-y-2 hover:rotate-1">
-                            <img src="./img/keyimg.png" alt="SEO Growth Chart" class="w-full h-full object-cover" />
-                            <!-- <div
-                                class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-500 flex items-end justify-center">
-                                <p class="text-white text-sm font-medium p-4">SEO Traffic Surge</p>
-                            </div> -->
-                        </div>
-                        <div
-                            class="absolute -top-4 -left-4 w-10 h-10 bg-cyan-500 rounded-full opacity-40 animate-float">
-                        </div>
-                    </div>
                 </div>
             </div>
+
+            <!-- Summary -->
+            <p class="italic text-gray-500 text-[14px] mt-12 text-center">
+                Voicene’s tailored SEO efforts have substantially increased Arppan's search engine performance, driving
+                higher engagement and visibility across Kerala and beyond.
+            </p>
         </div>
 
         <!-- JavaScript for Scroll Animation -->
         <script>
             document.addEventListener('DOMContentLoaded', () => {
-                const cards = document.querySelectorAll('.achievement-card');
-                const images = document.querySelectorAll('.image-container');
+                const sections = document.querySelectorAll('.flex-col, .md\\:flex-row');
 
                 const observer = new IntersectionObserver((entries) => {
                     entries.forEach(entry => {
@@ -1062,89 +1028,21 @@
                     });
                 }, { threshold: 0.2 });
 
-                cards.forEach(card => observer.observe(card));
-                images.forEach(image => observer.observe(image));
+                sections.forEach(section => observer.observe(section));
             });
         </script>
     </section>
 
     <style>
-        /* Glassmorphic Effect */
-        .glassmorphic {
-            background: rgba(255, 255, 255, 0.08);
-            backdrop-filter: blur(12px);
-            border: 1px solid rgba(255, 255, 255, 0.15);
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.25);
-        }
-
-        /* Floating Animation */
-        @keyframes float {
-
-            0%,
-            100% {
-                transform: translateY(0);
-            }
-
-            50% {
-                transform: translateY(-12px);
-            }
-        }
-
-        .animate-float {
-            animation: float 4s ease-in-out infinite;
-        }
-
-        .animate-float.delay-700 {
-            animation-delay: 0.7s;
-        }
-
-        /* Gradient Animation for Header */
-        @keyframes gradient {
-            0% {
-                background-position: 0% 50%;
-            }
-
-            50% {
-                background-position: 100% 50%;
-            }
-
-            100% {
-                background-position: 0% 50%;
-            }
-        }
-
-        .animate-gradient {
-            background-size: 200% 200%;
-            animation: gradient 8s ease-in-out infinite;
-        }
-
-        /* Particles Background */
-        .particles {
-            position: absolute;
-            inset: 0;
-            background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%"><circle cx="20" cy="20" r="2" fill="rgba(255,255,255,0.15)"/><circle cx="60" cy="60" r="3" fill="rgba(255,255,255,0.25)"/><circle cx="90" cy="30" r="2" fill="rgba(255,255,255,0.2)"/><circle cx="40" cy="80" r="2" fill="rgba(255,255,255,0.1)"/></svg>') repeat;
-            animation: moveParticles 30s linear infinite;
-        }
-
-        @keyframes moveParticles {
-            0% {
-                background-position: 0 0;
-            }
-
-            100% {
-                background-position: 120px 120px;
-            }
-        }
-
         /* Fade-In Animation for Scroll */
         .animate-fade-in {
-            animation: fadeIn 1s ease-out forwards;
+            animation: fadeIn 0.8s ease-out forwards;
         }
 
         @keyframes fadeIn {
             from {
                 opacity: 0;
-                transform: translateY(20px);
+                transform: translateY(15px);
             }
 
             to {
@@ -1153,7 +1051,6 @@
             }
         }
     </style>
-
     <!-- ========== FOOTER ========== -->
     <footer class="mt-auto w-full max-w-[85rem] pt-10 mx-auto bg-white">
         <!-- Grid -->
