--- a/casestudy/wireless-gadgetz.html
+++ b/casestudy/wireless-gadgetz.html
@@ -852,7 +852,7 @@
     </header>
     <!-- ========== END HEADER ========== -->
 
-<section>
+    <section>
         <div class="relative">
             <img src="./img/wireless-banner.jpg" class="absolute inset-0 object-cover w-full h-full" alt="" />
             <div class="relative bg-gray-900 bg-opacity-75">
@@ -926,237 +926,147 @@
 
 
 
-<section class="relative  bg-gradient-to-br from-gray-900 via-indigo-950 to-black py-20 overflow-hidden">
-    <!-- Background Wave Animation -->
-    <div class="absolute inset-0 pointer-events-none">
-        <div class="wave-bg"></div>
-        <!-- Particles Overlay -->
-        <div class="particles"></div>
-    </div>
-
-    <div class="max-w-7xl mx-auto px-6 md:px-12">
-        <!-- Header -->
-        <div class="text-center mb-16">
-            <h2 class="text-4xl md:text-5xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-blue-500 via-purple-500 to-indigo-600 animate-gradient">
-                Wireless Gadgetz SEO Success
-            </h2>
-            <div class="w-32 h-1 bg-gradient-to-r from-blue-500 to-indigo-600 mx-auto mt-4 rounded-full animate-pulse"></div>
-        </div>
-
-        <!-- Main Content -->
-        <div class="grid grid-cols-1 lg:grid-cols-5 gap-8 items-start">
-            <!-- Left: Achievement Cards -->
-            <div class="lg:col-span-3 space-y-8">
-                <!-- Introductory Text -->
-                
-                <!-- Achievement Cards -->
-                <div class="achievement-card glassmorphic p-8 rounded-2xl transform transition-all duration-500 hover:shadow-xl hover:-translate-y-2 animate-fade-in">
-                    <h3 class="text-2xl font-semibold text-blue-600 mb-3 flex items-center">
-                        <span class="mr-3 text-3xl">📈</span> Traffic Clicks
-                    </h3>
-                    <p class="text-white text-[15px] leading-relaxed">
-                        506 clicks, reflecting strong user engagement with targeted search traffic.
-                    </p>
-                </div>
-
-                <div class="achievement-card glassmorphic p-8 rounded-2xl transform transition-all duration-500 hover:shadow-xl hover:-translate-y-2 animate-fade-in">
-                    <h3 class="text-2xl font-semibold text-blue-600 mb-3 flex items-center">
-                        <span class="mr-3 text-3xl">🎯</span> Total Impressions
-                    </h3>
-                    <p class="text-white text-[15px] leading-relaxed">
-                        9.15K impressions, showcasing enhanced visibility and brand awareness.
-                    </p>
-                </div>
-
-                <div class="achievement-card glassmorphic p-8 rounded-2xl transform transition-all duration-500 hover:shadow-xl hover:-translate-y-2 animate-fade-in">
-                    <h3 class="text-2xl font-semibold text-blue-600 mb-3 flex items-center">
-                        <span class="mr-3 text-3xl">🔍</span> Average Click-Through Rate (CTR)
-                    </h3>
-                    <p class="text-white text-[15px] leading-relaxed">
-                        5.5%, highlighting effective optimization of meta titles and descriptions.
-                    </p>
-                </div>
-
-                <div class="achievement-card glassmorphic p-8 rounded-2xl transform transition-all duration-500 hover:shadow-xl hover:-translate-y-2 animate-fade-in">
-                    <h3 class="text-2xl font-semibold text-blue-600 mb-3 flex items-center">
-                        <span class="mr-3 text-3xl">📊</span> Average Position
-                    </h3>
-                    <p class="text-white text-[15px] leading-relaxed">
-                        18, demonstrating consistent improvement in search rankings for competitive keywords.
-                    </p>
-                </div>
-
-                <div class="achievement-card glassmorphic p-8 rounded-2xl transform transition-all duration-500 hover:shadow-xl hover:-translate-y-2 animate-fade-in">
-                    <h3 class="text-2xl font-semibold text-blue-600 mb-3 flex items-center">
-                        <span class="mr-3 text-3xl">📢</span> Meta Ads
-                    </h3>
-                    <p class="text-white text-[15px] leading-relaxed">
-                        Generated 56 orders in 7 days with a $35 budget, reaching over 9,000 people.
-                    </p>
-                </div>
-
-                <!-- Concluding Text -->
-                <p class="text-center italic text-white text-[14px] mt-8 animate-fade-in">
-                    Our SEO strategy, encompassing content optimization, targeted keyword implementation, and backlink building, drove steady growth in impressions and clicks, as evidenced by the GA4 graph. Voicene’s efforts have solidified Wireless Gadgetz’s online presence, boosting traffic and conversions through organic search.
-                </p>
+    <section class="relative bg-white py-16">
+        <div class="max-w-7xl mx-auto px-6 md:px-12">
+            <!-- Header -->
+            <div class="text-left mb-12">
+                <h2 class="text-3xl md:text-4xl font-bold text-gray-800">
+                    Wireless Gadgetz SEO Success
+                </h2>
             </div>
 
-            <!-- Right: Stacked Images with Parallax -->
-                <div class="lg:col-span-2 space-y-6">
-                    <div class="relative group">
-                        <div
-                            class="image-container relative w-full h-64 rounded-2xl overflow-hidden shadow-xl transform transition-transform duration-700 hover:-translate-y-2 hover:rotate-1">
-                            <img src="./img/keyimg.png" alt="SEO Growth Chart" class="w-full h-full object-cover" />
-                            <!-- <div
-                                class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-500 flex items-end justify-center">
-                                <p class="text-white text-sm font-medium p-4">SEO Traffic Surge</p>
-                            </div> -->
-                        </div>
-                        <div
-                            class="absolute -top-4 -left-4 w-10 h-10 bg-cyan-500 rounded-full opacity-40 animate-float">
-                        </div>
-                    </div>
+            <!-- Stats Section -->
+            <!--    
+                <div class="border-r-0 md:border-r border-gray-200">
+                    <p class="text-4xl font-bold text-gray-800">506</p>
+                    <p class="text-sm text-gray-600 uppercase mt-2">Traffic Clicks</p>
+                </div>
+                <div class="border-r-0 md:border-r border-gray-200">
+                    <p class="text-4xl font-bold text-gray-800">9.15K</p>
+                    <p class="text-sm text-gray-600 uppercase mt-2">Total Impressions</p>
+                </div>
+                <div>
+                    <p class="text-4xl font-bold text-gray-800">5.5%</p>
+                    <p class="text-sm text-gray-600 uppercase mt-2">CTR Achieved</p>
+                </div>
+            </div> -->
 
-                    <div class="relative group md:ml-20 ml-12">
-                        <div
-                            class="image-container relative w-full h-64 rounded-2xl overflow-hidden shadow-xl transform transition-transform duration-700 hover:-translate-y-2 hover:-rotate-1">
-                            <img src="./img/keyimg.png" alt="SEO Analytics Dashboard"
-                                class="w-full h-full object-cover" />
-                            <!-- <div
-                                class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-500 flex items-end justify-center">
-                                <p class="text-white text-sm font-medium p-4">Analytics in Action</p>
-                            </div> -->
-                        </div>
-                        <div
-                            class="absolute -bottom-4 -right-4 w-12 h-12 bg-pink-500 rounded-full opacity-40 animate-float delay-700">
-                        </div>
-                    </div>
-                    <div class="relative group">
-                        <div
-                            class="image-container relative w-full h-64 rounded-2xl overflow-hidden shadow-xl transform transition-transform duration-700 hover:-translate-y-2 hover:rotate-1">
-                            <img src="./img/keyimg.png" alt="SEO Growth Chart" class="w-full h-full object-cover" />
-                            <!-- <div
-                                class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-500 flex items-end justify-center">
-                                <p class="text-white text-sm font-medium p-4">SEO Traffic Surge</p>
-                            </div> -->
-                        </div>
-                        <div
-                            class="absolute -top-4 -left-4 w-10 h-10 bg-cyan-500 rounded-full opacity-40 animate-float">
-                        </div>
+            <!-- Main Content -->
+            <div class="space-y-8">
+                <!-- Traffic Clicks -->
+                <div class="flex flex-col md:flex-row items-start gap-6 border-b border-gray-200 pb-6">
+                    <h3
+                        class="text-xl font-semibold bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-blue-800 md:w-1/4">
+                        Traffic Clicks
+                    </h3>
+                    <div class="md:w-3/4">
+                        <p class="text-gray-600 text-[15px] leading-relaxed">
+                            506 clicks, indicating strong user engagement with targeted search traffic.
+                        </p>
                     </div>
                 </div>
+
+                <!-- Total Impressions -->
+                <div class="flex flex-col md:flex-row items-start gap-6 border-b border-gray-200 pb-6">
+                    <h3
+                        class="text-xl font-semibold bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-blue-800 md:w-1/4">
+                        Total Impressions
+                    </h3>
+                    <div class="md:w-3/4">
+                        <p class="text-gray-600 text-[15px] leading-relaxed">
+                            9.15K, demonstrating increased visibility and brand awareness.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Average Click-Through Rate (CTR) -->
+                <div class="flex flex-col md:flex-row items-start gap-6 border-b border-gray-200 pb-6">
+                    <h3
+                        class="text-xl font-semibold bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-blue-800 md:w-1/4">
+                        Average Click-Through Rate (CTR)
+                    </h3>
+                    <div class="md:w-3/4">
+                        <p class="text-gray-600 text-[15px] leading-relaxed">
+                            5.5%, a positive metric showcasing effective optimization of meta titles and descriptions.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Average Position -->
+                <div class="flex flex-col md:flex-row items-start gap-6 border-b border-gray-200 pb-6">
+                    <h3
+                        class="text-xl font-semibold bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-blue-800 md:w-1/4">
+                        Average Position
+                    </h3>
+                    <div class="md:w-3/4">
+                        <p class="text-gray-600 text-[15px] leading-relaxed">
+                            18, reflecting consistent improvement in search rankings for competitive keywords. </p>
+                    </div>
+                </div>
+
+                <!-- Meta Ads -->
+                <div class="flex flex-col md:flex-row items-start gap-6 border-b border-gray-200 pb-6">
+                    <h3
+                        class="text-xl font-semibold bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-blue-800 md:w-1/4">
+                        Meta Ads
+                    </h3>
+                    <div class="md:w-3/4">
+                        <p class="text-gray-600 text-[15px] leading-relaxed">
+                            Generated 56 orders in 7 days with a $35 budget, reaching over 9,000 people.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Conclusion -->
+            <p class="italic text-gray-500 text-[14px] mt-12 text-center">
+                Our SEO strategy included content optimization, targeted keyword implementation, and backlink building,
+                which led to steady growth in impressions and clicks, as evidenced by the GA4 graph. Voicene’s efforts
+                have positioned Wireless Gadgetz as a reliable brand for assistive technology in Texas, driving both
+                traffic and conversions through organic search.
+            </p>
         </div>
-    </div>
 
-    <!-- JavaScript for Scroll Animation -->
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const elements = document.querySelectorAll('.animate-fade-in');
-            const observer = new IntersectionObserver((entries) => {
-                entries.forEach(entry => {
-                    if (entry.isIntersecting) {
-                        entry.target.classList.add('opacity-100', 'translate-y-0');
-                        observer.unobserve(entry.target);
-                    }
-                });
-            }, { threshold: 0.2 });
+        <!-- JavaScript for Scroll Animation -->
+        <script>
+            document.addEventListener('DOMContentLoaded', () => {
+                const sections = document.querySelectorAll('.flex-col, .md\\:flex-row');
 
-            elements.forEach(element => {
-                element.classList.add('opacity-0', 'translate-y-10');
-                observer.observe(element);
+                const observer = new IntersectionObserver((entries) => {
+                    entries.forEach(entry => {
+                        if (entry.isIntersecting) {
+                            entry.target.classList.add('animate-fade-in');
+                            observer.unobserve(entry.target);
+                        }
+                    });
+                }, { threshold: 0.2 });
+
+                sections.forEach(section => observer.observe(section));
             });
-        });
-    </script>
-</section>
+        </script>
+    </section>
 
-<style>
-/* Glassmorphic Effect */
-.glassmorphic {
-            background: rgba(255, 255, 255, 0.08);
-            backdrop-filter: blur(12px);
-            border: 1px solid rgba(255, 255, 255, 0.15);
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.25);
+    <style>
+        /* Fade-In Animation for Scroll */
+        .animate-fade-in {
+            animation: fadeIn 0.8s ease-out forwards;
         }
 
-/* Gradient Animation for Header */
-@keyframes gradient {
-    0% { background-position: 0% 50%; }
-    50% { background-position: 100% 50%; }
-    100% { background-position: 0% 50%; }
-}
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(15px);
+            }
 
-.animate-gradient {
-    background-size: 200% 200%;
-    animation: gradient 8s ease-in-out infinite;
-}
-
-/* Wave Background Animation */
-.wave-bg {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="rgba(200,220,255,0.2)" fill-opacity="1" d="M0,96L48,112C96,128,192,160,288,160C384,160,480,128,576,112C672,96,768,96,864,112C960,128,1056,160,1152,160C1248,160,1344,128,1392,112L1440,96L1440,320L0,320Z"></path></svg>') repeat-x;
-    animation: wave 15s linear infinite;
-}
-
-@keyframes wave {
-    0% { background-position: 0 bottom; }
-    100% { background-position: -1440px bottom; }
-}
-
-/* Particles Overlay */
-.particles {
-    position: absolute;
-    inset: 0;
-    background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%"><circle cx="20" cy="20" r="2" fill="rgba(200,200,200,0.3)"/><circle cx="60" cy="60" r="3" fill="rgba(200,200,200,0.3)"/><circle cx="90" cy="30" r="2" fill="rgba(200,200,200,0.3)"/><circle cx="40" cy="80" r="2" fill="rgba(200,200,200,0.2)"/></svg>') repeat;
-    animation: moveParticles 30s linear infinite;
-}
-
-@keyframes moveParticles {
-    0% { background-position: 0 0; }
-    100% { background-position: 120px 120px; }
-}
-
-/* Floating Animation for Orbs */
-@keyframes float {
-    0%, 100% { transform: translateY(0); }
-    50% { transform: translateY(-12px); }
-}
-
-.animate-float {
-    animation: float 4s ease-in-out infinite;
-}
-
-.animate-float.delay-700 {
-    animation-delay: 0.7s;
-}
-
-/* Fade-In Animation for Scroll */
-.animate-fade-in {
-    transition: opacity 1s ease-out, transform 1s ease-out;
-}
-
-.opacity-0 {
-    opacity: 0;
-}
-
-.translate-y-10 {
-    transform: translateY(20px);
-}
-
-.opacity-100 {
-    opacity: 1;
-}
-
-.translate-y-0 {
-    transform: translateY(0);
-}
-</style>
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+    </style>
 
 
-<!-- ========== FOOTER ========== -->
+    <!-- ========== FOOTER ========== -->
     <footer class="mt-auto w-full max-w-[85rem] pt-10 mx-auto bg-white">
         <!-- Grid -->
         <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-6 mb-10 px-4 sm:px-6 lg:px-8">
